# MPRPC

./: CMakeLists.txt  READMD.md  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  logger.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpcapplication.h  mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/other/: test  testBoost.cpp  testMuduo
test/proto/test/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
test/proto/test1/: a.out  main.cc  test1.pb.cc  test1.pb.h  test1.proto
